--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   get: ^4.6.6
   shared_preferences: ^2.2.3
+  share_plus: ^7.2.2
 
 dev_dependencies:
   flutter_test:
